--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.6"
 requests = "^2.24.0"
 "discord.py" = "^1.5.0"
 beautifulsoup4 = "^4.9.3"
+pytz = "^2020.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
