Fixed structure of .gitignore, updated channel id on boot.py in order to send messages on my dev channel. Fix in the near future.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Bot Config Files
+/dsit_bot/config/bot_token.tok
+
 # Pycharm files
 .idea/
 
@@ -139,4 +142,3 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
-/dsit_bot/config/bot_token.tok
